Bug 111975 - Inline checkbox control's label is not saved to DOC format
Summary: Inline checkbox control's label is not saved to DOC format
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-22 19:48 UTC by Tamás Zolnai
Modified: 2017-08-22 22:23 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-22 19:48:04 UTC
Description:
After inserting a checkbox form control in Writer and save it to a DOC file the checkbox label is missing. It might be related to the fact that it's exported as a MSO legacy control. It would be better to save it as an MSO activeX control, since activeX control has a better match with LO checkbox control (e.g. appearance, properties, positionin).

Steps to Reproduce:
1. Open Writer
2. Insert a checkbox control (Insert -> Form Control -> Check Box)
3. Anchor it as character
4. Save it in a DOC file
5. Open it in MSO or LO

Actual Results:  
Checkbox's label is missing after reopening the document.

Expected Results:
Label should be preserved.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.101 Safari/537.36
Comment 1 Commit Notification 2017-08-22 22:19:54 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b45446fcb4958b13bc94e70e2d3d1940db3322e2

tdf#111975: Inline checkbox control's label is not saved to DOC format

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.