tdf#111975: Inline checkbox control's label is not saved to DOC format

This MiserableFormFieldExportHack lives from the beginning
of the git history:
7155b11b7eac65e242aca1efaf29ffcfa28f2564

So it might be a workaround of an old issue. By now when
the checkbox is not inline, but a floating one, it is exported
as ActiveX control, which works nicely. So just remove this
workaround and let the code export also inline checkboxes
as ActiveX controls.

Change-Id: I350b7a7595bb46334c63d9dfcf40abf9e10943bc